--- a/常用代码段/20图片放大镜功能/index.css
+++ b/常用代码段/20图片放大镜功能/index.css
@@ -1,44 +1,40 @@
-html,body,div,img {
-	margin:0;
-	padding:0;
-	-webkit-user-select:none;
+.imgbox {
+	position:relative;
+	margin-left:100px;
 }
-img {
-	border:none;
-}
-#box1,#box2 {
-	position:absolute;
-	top:30px;
+.probox {
 	width:300px;
 	height:300px;
-	box-shadow:4px 4px 10px 0 #616161;
+	border:1px solid #000;
 }
-#box1 {
-	left:50px;
+.probox img {
+	width:300px;
+	height:300px;
+	vertical-align:top;
 }
-#box2 {
-	display:none;
-	left:360px;
-	overflow:hidden;
-}
-#mark {
+.showbox {
 	display:none;
 	position:absolute;
-	top:50px;
-	left:50px;
+	left:403px;
+	top:0;
+	width:400px;
+	height:300px;
+	overflow:hidden;
+	border:1px solid #ccc;
+}
+.showbox img {
+	position:absolute;
+	height:1200px;
+	width:1200px;
+}
+.hoverbox {
+	display:none;
+	position:absolute;
+	top:0;
+	background:#09f;
+	border:1px solid #09f;
+	height:75px;
 	width:100px;
-	height:100px;
-	opacity:0.4;
-	filter:alpha(opacity=40);
 	cursor:move;
-	background-color:#000;
-}
-#box1 img {
-	width:100%;
-	height:100%;
-}
-#box2 img {
-	display:block;
-	width:300%;
-	height:300%;
+	z-index:10;
 }
