--- a/常用代码段/03Beautiful分页插件/index.css
+++ b/常用代码段/03Beautiful分页插件/index.css
@@ -1,26 +1,38 @@
-.pager {
-	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
-	border:1px solid #dddddd;
-	border-radius:3px;
-	display:inline-block;
-	clear:both;
+* {
+	padding:0px;
+	margin:0px;
 }
-.pager a,.pager span {
-	font-size:14px;
-	color:#428bca;
-	border-right:1px solid #dddddd;
-	padding:4px 9px;
+ul li {
+	list-style-type:none;
+}
+.ul_btn {
+	overflow:hidden;
+	padding:10px;
+}
+.ul_btn li {
 	float:left;
-	text-decoration:none;
+	height:30px;
+	text-align:center;
+	line-height:30px;
+	border:1px solid #ddd;
+	border-radius:4px;
+	margin-left:5px;
+	padding:0px 10px;
+	box-shadow:0px -1px 5px #c8c8c8 inset;
+	font-size:12px;
+	cursor:pointer;
 }
-.pager span {
-	color:#fff;
-	background:#428bca;
+.ul_btn li.active {
+	box-shadow:none;
+	height:25px;
+	margin-top:5px;
 }
-.pager a:hover {
-	color:#2a6496;
-	background:#f2f2f2;
+.ul_btn li.noneBtn {
+	background-color:#f5f5f5;
+	box-shadow:none;
+	cursor:auto;
 }
-.pager a.last {
-	border-right:0;
+.ul_btn li.otherLi {
+	box-shadow:none;
+	cursor:auto;
 }
